--- a/app/src/main/res/layout/activity_vuvod.xml
+++ b/app/src/main/res/layout/activity_vuvod.xml
@@ -21,15 +21,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_vuvod" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email"
-        android:visibility="invisible" />
+        app:srcCompat="@android:drawable/stat_sys_download_done"
+        android:visibility="visible" />
+
+    <include layout="@layout/content_vuvod" />
 
 </android.support.design.widget.CoordinatorLayout>
