--- a/app/src/main/res/layout/content_pdiet.xml
+++ b/app/src/main/res/layout/content_pdiet.xml
@@ -13,4 +13,34 @@
     tools:context="com.example.user.diplom.Pdiet"
     tools:showIn="@layout/activity_pdiet">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView19"
+                android:gravity="center_horizontal"
+                android:textSize="30sp" />
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView18"
+                android:textSize="24sp"
+                android:gravity="center_horizontal" />
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
