--- a/app/src/main/res/layout/content_sdiet.xml
+++ b/app/src/main/res/layout/content_sdiet.xml
@@ -13,4 +13,15 @@
     tools:context="com.example.user.diplom.Sdiet"
     tools:showIn="@layout/activity_sdiet">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/ll2" />
+    </ScrollView>
+
 </RelativeLayout>
