--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -10,11 +10,17 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Диеты" />
+            android:title="Рационы" />
         <item
+            android:id="@+id/nav_eat"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Блюда" />
+       <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="База данных продуктов" />
+            android:title="Продукты"
+           android:visible="false" />
+
     </group>
 
 </menu>
