--- a/app/src/main/res/layout/content_vuvod.xml
+++ b/app/src/main/res/layout/content_vuvod.xml
@@ -16,8 +16,10 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -28,67 +30,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-                <TextView
-                    android:text="Идеальный вес"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView8"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textStyle="normal|bold"
-                    android:textSize="30sp"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center_horizontal" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-                <TextView
-                    android:text="CalcVes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/CalcVes"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:textStyle="normal|bold"
-                    android:textSize="90sp"
-                    android:textAllCaps="false"
-                    android:textAlignment="center"
-                    android:textColor="@color/accent_material_dark_1"
-                    android:gravity="center_horizontal" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="15dp">
-
-                <TextView
-                    android:text="Ваш вес"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView7"
-                    android:layout_weight="1"
-                    android:elevation="0dp"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:text="Ves"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/Ves"
-                    android:layout_weight="0"
-                    android:layout_gravity="right"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
-            </TableRow>
+                android:layout_height="match_parent" />
 
             <TableRow
                 android:layout_width="match_parent"
@@ -100,9 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView4"
-                    android:layout_weight="1"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:text="Pol"
@@ -110,9 +50,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/Pol"
                     android:layout_weight="0"
-                    android:layout_gravity="right"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_gravity="right" />
             </TableRow>
 
             <TableRow
@@ -125,9 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView5"
-                    android:layout_weight="1"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:text="Vozrast"
@@ -138,9 +74,7 @@
                     android:layout_alignParentStart="true"
                     android:id="@+id/Vozrast"
                     android:layout_weight="0"
-                    android:layout_gravity="right"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_gravity="right" />
             </TableRow>
 
             <TableRow
@@ -153,9 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView6"
-                    android:layout_weight="1"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:text="Rost"
@@ -163,9 +95,50 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/Rost"
                     android:layout_weight="0"
-                    android:layout_gravity="right"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp" />
+                    android:layout_gravity="right" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="15dp">
+
+                <TextView
+                    android:text="Вес"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView7"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:text="Ves"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Ves"
+                    android:layout_weight="0"
+                    android:layout_gravity="right" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:text="Идеальный вес"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView8"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="50dp" />
+
+                <TextView
+                    android:text="CalcVes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/CalcVes"
+                    android:layout_weight="0"
+                    android:layout_gravity="right" />
+
             </TableRow>
 
             <TableRow
@@ -173,25 +146,34 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:text="Тип рациона"
+                <RadioGroup
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView21"
-                    android:textSize="18sp"
-                    android:layout_weight="1"
-                    android:textStyle="normal|bold" />
+                    >
 
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/Typ"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp"
-                    android:layout_weight="0"
-                    android:layout_gravity="right"
-                    android:textColor="@color/accent_material_dark_1" />
+                    <RadioButton
+                        android:text="Набор веса"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton3"
+                        android:layout_weight="1" />
+
+                    <RadioButton
+                        android:text="Поддержание веса"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton4"
+                        android:layout_weight="1" />
+
+                    <RadioButton
+                        android:text="Сброс веса"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton5"
+                        android:layout_weight="1" />
+
+                </RadioGroup>
+
             </TableRow>
         </TableLayout>
     </ScrollView>
